# fsm

./: CMakeLists.txt
include/: fsm.hpp  test.hpp
src/: main.cpp
